tests/error/modifier_errors/nested_call_in_dagger.err
Error: Dagger constraint violation (at $FILE:19:24)
   | 
17 | def test(q: qubit) -> None:
18 |     with dagger:
19 |         rx(q, angle(1 / classical_helper(2)))
   |                         ^^^^^^^^^^^^^^^^^^^ This function cannot be called in a daggerable context

Help: Consider adding the flag `(daggerable=True)` to the decorator of the
function `classical_helper`

Guppy compilation failed due to 1 previous error
